sort.basic.gnome.AlgGnomeSort.scala.error
Erreur de compilation :
AlgGnomeSort:3: error: not found: value i
  if(i == 0){i+=1}
     ^AlgGnomeSort:3: error: not found: value i
  if(i == 0){i+=1}
             ^