sort.basic.gnome.AlgGnomeSort.scala.code
def gnomeSort() { 
  if(i == 0){i+=1}
  
}